# nudelta

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  Changelog.md  Dockerfile  Makefile  OSAcknowledgements.txt  Readme.md  compile_licenses.js  docs.md  donns_remap.yml  example.yml  flake.nix  index.cjs  package.json  rollup.config.js  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  requests.yml
.github/scripts/: generate_tag.py  gh.py
.github/workflows/: ci.yml
include/: access.hpp  air75.hpp  common.hpp  defer.hpp  nuphy.hpp  ssco.hpp
lib/: access.cpp  air75.cpp  hid.cpp  nuphy.cpp  ssco.cpp
res/: air75_default_keymap.yml  air75_indices.yml  air75_indices_mac.yml  air75_indices_win.yml  air75_keycodes.yml  nudelta.icns  to_cpp.py
res/Air75/: default_keymap_mac.yml  default_keymap_win.yml  indices_mac.yml  indices_win.yml  keycodes.yml
res/Air96/: indices_mac.yml
res/Halo65/: default_keymap_mac.yml  default_keymap_win.yml  indices.yml  indices_mac.yml  indices_win.yml
res/Halo75/: default_keymap_mac.yml  default_keymap_win.yml  indices_mac.yml  indices_win.yml  keycodes.yml  modifiers.yml
res/Halo96/: default_keymap_win.yml  indices_mac.yml  indices_win.yml
res/NuPhy/: keycodes.yml  modifiers.yml
res/air75/: default_keymap_mac.yml  default_keymap_win.yml  keycodes.yml  modifiers.yml
src/: air75.cpp  common.cpp  hid.cpp  main.cpp  node.cpp
submodules/toggle-switchy/: License
ui/: .gitignore  index.cjs  index.html  package.json  rollup.config.js
ui/lib/: tinydom.js
ui/src/: app.css  app.js  keyboards.js  modifiers.js  preload.js  toggle.css
util/: .gitignore  annotate_map.rb  build-native.js  copy.js  default.annotated.hex  docs.md  parse_from_pcap.rb  res_to_cpp.js  res_to_cpp.py
util/usb/: .gitignore  Air75_mac.annotated.hex  Air75_win.annotated.hex  Air96_mac.annotated.hex  Air96_win.annotated.hex  Halo75_mac.annotated.hex  Halo75_win.annotated.hex  Halo96_mac.annotated.hex  Halo96_win.annotated.hex  annotate_map.rb  default_mac.annotated.hex  docs.md  hex_to_yml.rb
